--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -2,12 +2,12 @@
 Transform: 'AWS::Serverless-2016-10-31'
 Description: An AWS Serverless Specification template describing your function.
 Resources:
-  helloworldlambda:
+  hello-world-lambda:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
-      CodeUri: .
+      CodeUri: ./
       Description: ''
       MemorySize: 128
       Timeout: 3
