--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -2,7 +2,7 @@
 Transform: 'AWS::Serverless-2016-10-31'
 Description: An AWS Serverless Specification template describing your function.
 Resources:
-  hello-world-lambda:
+  helloworldlambda:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: lambda_function.lambda_handler
