--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -7,7 +7,7 @@ Resources:
     Properties:
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
-      CodeUri: ./
+      CodeUri: .
       Description: ''
       MemorySize: 128
       Timeout: 3
