--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -7,7 +7,7 @@ Resources:
     Properties:
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
-      CodeUri: .
+      CodeUri: s3://lk.bigdata.code.repo/helloworldlambda.zip
       Description: ''
       MemorySize: 128
       Timeout: 3
